manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reporting-service
  namespace: it-reporting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reporting-service
  template:
    metadata:
      labels:
        app: reporting-service
    spec:
      containers:
        - name: reporting-service
          image: devacr231225.azurecr.io/reporting-service:v1
          ports:
            - containerPort: 8083
          readinessProbe:
            httpGet:
              path: /
              port: 8083
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /
              port: 8083
            initialDelaySeconds: 40
            periodSeconds: 20
