manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: reporting-service
  namespace: it-reporting
spec:
  selector:
    app: reporting-service
  ports:
    - port: 80
      targetPort: 8083
